--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -27,7 +27,6 @@ jobs:
       run: |
         ls
         pwd
-        wget ${{github.event.inputs.RECOVERY_URL }}
 
     - name: Patch Process-1
       run: |
@@ -40,10 +39,10 @@ jobs:
         chmod a+x script2.sh
         ./script2.sh || true
         python3 avbtool extract_public_key --key phh.pem --output phh.pub.bin
-        python3 avbtool add_hash_footer --partition_name recovery --partition_size $(wc -c recovery.img |cut -f 1 -d ' ') --image recovery-patched.img --key phh.pem --algorithm SHA256_RSA4096
+        python3 avbtool add_hash_footer --partition_name recovery --partition_size $(wc -c vendor_boot.img |cut -f 1 -d ' ') --image vendor_boot-patched.img --key phh.pem --algorithm SHA256_RSA4096
         mkdir output && cd output
-        mv ../recovery-patched.img recovery.img
-        tar cvf fastbootd-recovery.tar recovery.img
+        mv ../vendor_boot-patched.img vendor_boot.img
+        tar cvf fastbootd-recovery.tar vendor_boot.img
         md5sum -t fastbootd-recovery.tar >> fastbootd-recovery.tar
         mv fastbootd-recovery.tar fastbootd-recovery.tar.md5
 
