--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -39,7 +39,7 @@ jobs:
         chmod a+x script2.sh
         ./script2.sh || true
         python3 avbtool extract_public_key --key phh.pem --output phh.pub.bin
-        python3 avbtool add_hash_footer --partition_name recovery --partition_size $(wc -c vendor_boot.img |cut -f 1 -d ' ') --image vendor_boot-patched.img --key phh.pem --algorithm SHA256_RSA4096
+        python3 avbtool add_hash_footer --partition_name recovery --partition_size $(wc -c vendor_boot-patched.img |cut -f 1 -d ' ') --image vendor_boot-patched.img --key phh.pem --algorithm SHA256_RSA4096
         mkdir output && cd output
         mv ../vendor_boot-patched.img vendor_boot.img
         tar cvf fastbootd-recovery.tar vendor_boot.img
@@ -47,7 +47,7 @@ jobs:
     - name: Upload to Release
       uses: softprops/action-gh-release@v1
       with:
-        files: home/runner/work/Patch-Recovery-VB/Patch-Recovery-VB/output/fastbootd-recovery.tar
+        files: output/fastbootd-recovery.tar
         name: Patched-Recovery
         tag_name: ${{ github.run_id }}
         body: |
