--- a/.github/workflows/recovery.yml
+++ b/.github/workflows/recovery.yml
@@ -1,4 +1,4 @@
-name: RECOVERY
+name: VENDOR_BOOT
 
 on:
   workflow_dispatch:
@@ -7,9 +7,6 @@ on:
         description: 'RECOVERY URL'
         required: true
         default: 'https://gitlab.com/thenoobdevs2024/android_dump_samsung_a55x/-/raw/UP1A.231005.007/vendor_boot.img'
-
-env:
-  RECOVERY_URL: https://oshi.at/Rpjg
 
 jobs:
   build:
